clusters/cluster/apps/neuland-app/ical-service/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ical-service
  namespace: neuland-app
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - ical.neuland.app
    secretName: neuland-app-prod-tls
  rules:
  - host: ical.neuland.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ical-service
            port:
              number: 7077
